--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "pg-native": {
       "optional": true
     },
+    "pg-query-stream": {
+      "optional": true
+    },
     "sqlite3": {
       "optional": true
     },
